{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 92,
  "lineage": "88d1f245-1d6b-ea2f-cf42-f3a08fc83392",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:211125318375:transit-gateway/tgw-04ddc1a09203d22e8",
            "association_default_route_table_id": "tgw-rtb-05d62495ad79ea23d",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Main Transit Gateway for cross-VPC connectivity",
            "dns_support": "enable",
            "id": "tgw-04ddc1a09203d22e8",
            "multicast_support": "disable",
            "owner_id": "211125318375",
            "propagation_default_route_table_id": "tgw-rtb-05d62495ad79ea23d",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "Main-Transit-Gateway"
            },
            "tags_all": {
              "Name": "Main-Transit-Gateway"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:211125318375:transit-gateway-attachment/tgw-attach-06635d00d9ce24d72",
            "dns_support": "enable",
            "id": "tgw-attach-06635d00d9ce24d72",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-02f50ecb6ce590b99",
              "subnet-0a008ff58e5ebeb8a"
            ],
            "tags": {
              "Name": "Main-VPC-TGW-Attachment"
            },
            "tags_all": {
              "Name": "Main-VPC-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-04ddc1a09203d22e8",
            "vpc_id": "vpc-0ebe11190e33df566",
            "vpc_owner_id": "211125318375"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elastic_ip_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dfaa84b52a61612",
            "arn": "arn:aws:ec2:us-east-1:211125318375:elastic-ip/eipalloc-00dfaa84b52a61612",
            "association_id": "eipassoc-00f25f06ef5b81765",
            "domain": "vpc",
            "id": "eipalloc-00dfaa84b52a61612",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f70726e93b5d3ec0",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-13-223-182-159.compute-1.amazonaws.com",
            "public_ip": "13.223.182.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-for-NAT-GW-Main-1"
            },
            "tags_all": {
              "Name": "EIP-for-NAT-GW-Main-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022c1f11b5cdd9c3d",
            "arn": "arn:aws:ec2:us-east-1:211125318375:elastic-ip/eipalloc-022c1f11b5cdd9c3d",
            "association_id": "eipassoc-083893f6eae21994e",
            "domain": "vpc",
            "id": "eipalloc-022c1f11b5cdd9c3d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03a9fc05e315a9b85",
            "private_dns": "ip-10-0-2-251.ec2.internal",
            "private_ip": "10.0.2.251",
            "public_dns": "ec2-3-217-168-133.compute-1.amazonaws.com",
            "public_ip": "3.217.168.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-for-NAT-GW-Main-2"
            },
            "tags_all": {
              "Name": "EIP-for-NAT-GW-Main-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elastic_ip_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008c3b8f4087438ff",
            "arn": "arn:aws:ec2:us-west-1:211125318375:elastic-ip/eipalloc-008c3b8f4087438ff",
            "association_id": "eipassoc-0cc5b4b6d431496e7",
            "domain": "vpc",
            "id": "eipalloc-008c3b8f4087438ff",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0857d4323111adec1",
            "private_dns": "ip-10-1-1-110.us-west-1.compute.internal",
            "private_ip": "10.1.1.110",
            "public_dns": "ec2-52-53-49-153.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.49.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-for-NAT-GW-Secondary-1"
            },
            "tags_all": {
              "Name": "EIP-for-NAT-GW-Secondary-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024478e76f8f0bb59",
            "arn": "arn:aws:ec2:us-west-1:211125318375:elastic-ip/eipalloc-024478e76f8f0bb59",
            "association_id": "eipassoc-0b233250e5fef8592",
            "domain": "vpc",
            "id": "eipalloc-024478e76f8f0bb59",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0f9e2ef384503844b",
            "private_dns": "ip-10-1-2-218.us-west-1.compute.internal",
            "private_ip": "10.1.2.218",
            "public_dns": "ec2-52-8-8-128.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.8.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-for-NAT-GW-Secondary-2"
            },
            "tags_all": {
              "Name": "EIP-for-NAT-GW-Secondary-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:internet-gateway/igw-0f545498ff85e2b5e",
            "id": "igw-0f545498ff85e2b5e",
            "owner_id": "211125318375",
            "tags": {
              "Name": "Main-IGW"
            },
            "tags_all": {
              "Name": "Main-IGW"
            },
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:internet-gateway/igw-061308cf2e8843eb0",
            "id": "igw-061308cf2e8843eb0",
            "owner_id": "211125318375",
            "tags": {
              "Name": "Secondary-IGW"
            },
            "tags_all": {
              "Name": "Secondary-IGW"
            },
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dfaa84b52a61612",
            "association_id": "eipassoc-00f25f06ef5b81765",
            "connectivity_type": "public",
            "id": "nat-0f1094b595d97f3d4",
            "network_interface_id": "eni-0f70726e93b5d3ec0",
            "private_ip": "10.0.1.169",
            "public_ip": "13.223.182.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a008ff58e5ebeb8a",
            "tags": {
              "Name": "NAT-GW-Main-1"
            },
            "tags_all": {
              "Name": "NAT-GW-Main-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022c1f11b5cdd9c3d",
            "association_id": "eipassoc-083893f6eae21994e",
            "connectivity_type": "public",
            "id": "nat-007041f08d500fccd",
            "network_interface_id": "eni-03a9fc05e315a9b85",
            "private_ip": "10.0.2.251",
            "public_ip": "3.217.168.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f50ecb6ce590b99",
            "tags": {
              "Name": "NAT-GW-Main-2"
            },
            "tags_all": {
              "Name": "NAT-GW-Main-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008c3b8f4087438ff",
            "association_id": "eipassoc-0cc5b4b6d431496e7",
            "connectivity_type": "public",
            "id": "nat-033797f179e802a7e",
            "network_interface_id": "eni-0857d4323111adec1",
            "private_ip": "10.1.1.110",
            "public_ip": "52.53.49.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ac1a8075970f4d49",
            "tags": {
              "Name": "NAT-GW-Secondary-1"
            },
            "tags_all": {
              "Name": "NAT-GW-Secondary-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_secondary",
            "aws_subnet.public_secondary",
            "aws_vpc.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024478e76f8f0bb59",
            "association_id": "eipassoc-0b233250e5fef8592",
            "connectivity_type": "public",
            "id": "nat-0e678af429c9906bc",
            "network_interface_id": "eni-0f9e2ef384503844b",
            "private_ip": "10.1.2.218",
            "public_ip": "52.8.8.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0956c786a25558498",
            "tags": {
              "Name": "NAT-GW-Secondary-2"
            },
            "tags_all": {
              "Name": "NAT-GW-Secondary-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_secondary",
            "aws_subnet.public_secondary",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main_vpc_private_to_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-016ae01a844b451503322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-016ae01a844b45150",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-04ddc1a09203d22e8",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_eip.nat_elastic_ip_main",
            "aws_nat_gateway.nat_gw_main",
            "aws_route_table.private_main",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main_vpc_private_to_tgw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08231a9626465909d3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08231a9626465909d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-04ddc1a09203d22e8",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "aws_eip.nat_elastic_ip_main",
            "aws_nat_gateway.nat_gw_main",
            "aws_route_table.private_main",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:route-table/rtb-016ae01a844b45150",
            "id": "rtb-016ae01a844b45150",
            "owner_id": "211125318375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": "nat-0f1094b595d97f3d4",
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "Private-RT-Main-1"
            },
            "tags_all": {
              "Name": "Private-RT-Main-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_main",
            "aws_nat_gateway.nat_gw_main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:route-table/rtb-08231a9626465909d",
            "id": "rtb-08231a9626465909d",
            "owner_id": "211125318375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": "nat-007041f08d500fccd",
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "Private-RT-Main-2"
            },
            "tags_all": {
              "Name": "Private-RT-Main-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_main",
            "aws_nat_gateway.nat_gw_main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:route-table/rtb-00d5dd4a0162896b4",
            "id": "rtb-00d5dd4a0162896b4",
            "owner_id": "211125318375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-033797f179e802a7e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT-Secondary-1"
            },
            "tags_all": {
              "Name": "Private-RT-Secondary-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_secondary",
            "aws_nat_gateway.nat_gw_secondary",
            "aws_subnet.public_secondary",
            "aws_vpc.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:route-table/rtb-011df0d6b617ce2b3",
            "id": "rtb-011df0d6b617ce2b3",
            "owner_id": "211125318375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e678af429c9906bc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT-Secondary-2"
            },
            "tags_all": {
              "Name": "Private-RT-Secondary-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_secondary",
            "aws_nat_gateway.nat_gw_secondary",
            "aws_subnet.public_secondary",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:route-table/rtb-0cdd488d66f446746",
            "id": "rtb-0cdd488d66f446746",
            "owner_id": "211125318375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f545498ff85e2b5e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT-Main"
            },
            "tags_all": {
              "Name": "Public-RT-Main"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:route-table/rtb-0a919e876eca45129",
            "id": "rtb-0a919e876eca45129",
            "owner_id": "211125318375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061308cf2e8843eb0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT-Secondary"
            },
            "tags_all": {
              "Name": "Public-RT-Secondary"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_secondary",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e24378bc639c814a",
            "route_table_id": "rtb-016ae01a844b45150",
            "subnet_id": "subnet-0d2fcd7d34a5fdf83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_main",
            "aws_nat_gateway.nat_gw_main",
            "aws_route_table.private_main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09056fd585325b92f",
            "route_table_id": "rtb-08231a9626465909d",
            "subnet_id": "subnet-0f2a721bc28c9cea1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_main",
            "aws_nat_gateway.nat_gw_main",
            "aws_route_table.private_main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f9324b64d569b3a",
            "route_table_id": "rtb-00d5dd4a0162896b4",
            "subnet_id": "subnet-0cbc00d056584ccd0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_secondary",
            "aws_nat_gateway.nat_gw_secondary",
            "aws_route_table.private_secondary",
            "aws_subnet.private_secondary",
            "aws_subnet.public_secondary",
            "aws_vpc.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d867a9aa2a2916c4",
            "route_table_id": "rtb-011df0d6b617ce2b3",
            "subnet_id": "subnet-0ab17926c3dea02a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_elastic_ip_secondary",
            "aws_nat_gateway.nat_gw_secondary",
            "aws_route_table.private_secondary",
            "aws_subnet.private_secondary",
            "aws_subnet.public_secondary",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed45479e44a46797",
            "route_table_id": "rtb-0cdd488d66f446746",
            "subnet_id": "subnet-0a008ff58e5ebeb8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_main",
            "aws_route_table.public_main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aed604c0041bc00c",
            "route_table_id": "rtb-0cdd488d66f446746",
            "subnet_id": "subnet-02f50ecb6ce590b99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_main",
            "aws_route_table.public_main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09af172a80ff546f9",
            "route_table_id": "rtb-0a919e876eca45129",
            "subnet_id": "subnet-0ac1a8075970f4d49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_secondary",
            "aws_route_table.public_secondary",
            "aws_subnet.public_secondary",
            "aws_vpc.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0f1d8b27ecfefc5",
            "route_table_id": "rtb-0a919e876eca45129",
            "subnet_id": "subnet-0956c786a25558498"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_secondary",
            "aws_route_table.public_secondary",
            "aws_subnet.public_secondary",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secondary_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:security-group/sg-02340ceb8b690b2b3",
            "description": "Allow TLS, SSH, and HTTP inbound traffic from Secondary VPC, and all outbound traffic",
            "egress": [],
            "id": "sg-02340ceb8b690b2b3",
            "ingress": [],
            "name": "secondary-vpc-security-group",
            "name_prefix": "",
            "owner_id": "211125318375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secondary-vpc-security-group"
            },
            "tags_all": {
              "Name": "secondary-vpc-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:security-group/sg-0616aa076da82ad2b",
            "description": "Allow TLS, SSH, and HTTP inbound traffic from VPC, and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0616aa076da82ad2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-security-group",
            "name_prefix": "",
            "owner_id": "211125318375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-security-group"
            },
            "tags_all": {
              "Name": "vpc-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:subnet/subnet-0d2fcd7d34a5fdf83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2fcd7d34a5fdf83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125318375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:subnet/subnet-0f2a721bc28c9cea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2a721bc28c9cea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125318375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:subnet/subnet-0cbc00d056584ccd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbc00d056584ccd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125318375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-Secondary-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-Secondary-1"
            },
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:subnet/subnet-0ab17926c3dea02a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab17926c3dea02a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125318375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-Secondary-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-Secondary-2"
            },
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:subnet/subnet-0a008ff58e5ebeb8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a008ff58e5ebeb8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125318375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:subnet/subnet-02f50ecb6ce590b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f50ecb6ce590b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125318375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-0ebe11190e33df566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:subnet/subnet-0ac1a8075970f4d49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac1a8075970f4d49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125318375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-Secondary-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-Secondary-1"
            },
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:subnet/subnet-0956c786a25558498",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0956c786a25558498",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125318375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-Secondary-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-Secondary-2"
            },
            "vpc_id": "vpc-0cdfb8c84f2f9fc4e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:vpc/vpc-0ebe11190e33df566",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b762e1feaa596bb5",
            "default_route_table_id": "rtb-000b357bf1d936aa2",
            "default_security_group_id": "sg-04a4b0bb80aaefd60",
            "dhcp_options_id": "dopt-090d198601f6c749b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebe11190e33df566",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000b357bf1d936aa2",
            "owner_id": "211125318375",
            "tags": {
              "Name": "Main-VPC"
            },
            "tags_all": {
              "Name": "Main-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125318375:vpc/vpc-0cdfb8c84f2f9fc4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-064a5782c222fd241",
            "default_route_table_id": "rtb-0a7e223029349e238",
            "default_security_group_id": "sg-0fc1e62b27b482f52",
            "dhcp_options_id": "dopt-04de28ee1b9bb2c37",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cdfb8c84f2f9fc4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a7e223029349e238",
            "owner_id": "211125318375",
            "tags": {
              "Name": "Secondary-VPC"
            },
            "tags_all": {
              "Name": "Secondary-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:security-group-rule/sgr-04a1d90ab2ef4feaf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04a1d90ab2ef4feaf",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0616aa076da82ad2b",
            "security_group_rule_id": "sgr-04a1d90ab2ef4feaf",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:security-group-rule/sgr-0816aeaa6e3b8a81d",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0816aeaa6e3b8a81d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0616aa076da82ad2b",
            "security_group_rule_id": "sgr-0816aeaa6e3b8a81d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:security-group-rule/sgr-0c39b95ca4b6afe51",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c39b95ca4b6afe51",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0616aa076da82ad2b",
            "security_group_rule_id": "sgr-0c39b95ca4b6afe51",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125318375:security-group-rule/sgr-0db423dad9e6f4c62",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0db423dad9e6f4c62",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0616aa076da82ad2b",
            "security_group_rule_id": "sgr-0db423dad9e6f4c62",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}